--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
     <title><%= htmlWebpackPlugin.title %></title>
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css">
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-balham.css">
+    <link rel="stylesheet" href="/lib/ag-grid-community/dist/styles/ag-grid.css">
+    <link rel="stylesheet" href="/lib/ag-grid-community/dist/styles/ag-theme-balham.css">
 </head>
 <body>
 <div id="main"></div>
 
 <!-- Dependencies -->
-<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
+<script crossorigin src="/lib/react/umd/react.production.min.js"></script>
+<script crossorigin src="/lib/react-dom/umd/react-dom.production.min.js"></script>
+<script crossorigin src="/lib/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
 
 <!-- Main -->
 </body>
